@@ -3,6 +3,7 @@
 module.exports = AlgoliaSearch;
 
 var errors = require('./errors');
+var buildSearchMethod = require('./buildSearchMethod.js');
 
 // We will always put the API KEY in the JSON body in case of too long API KEY
 var MAX_API_KEY_LENGTH = 500;
@@ -2101,11 +2102,11 @@ AlgoliaSearch.prototype.Index.prototype = {
     });
   },
 
-  _search: function(params, callback) {
+  _search: function(params, url, callback) {
     return this.as._jsonRequest({
       cache: this.cache,
       method: 'POST',
-      url: '/1/indexes/' + encodeURIComponent(this.indexName) + '/query',
+      url: url || '/1/indexes/' + encodeURIComponent(this.indexName) + '/query',
       body: {params: params},
       hostType: 'read',
       fallback: {
@@ -2189,47 +2190,4 @@ function safeJSONStringify(obj) {
   Array.prototype.toJSON = toJSON;
 
   return out;
-}
-
-function buildSearchMethod(queryParam) {
-  return function search(query, args, callback) {
-    // warn V2 users on how to search
-    if (typeof query === 'function' && typeof args === 'object' ||
-      typeof callback === 'object') {
-      // .search(query, params, cb)
-      // .search(cb, params)
-      throw new errors.AlgoliaSearchError('index.search usage is index.search(query, params, cb)');
-    }
-
-    if (arguments.length === 0 || typeof query === 'function') {
-      // .search(), .search(cb)
-      callback = query;
-      query = '';
-    } else if (arguments.length === 1 || typeof args === 'function') {
-      // .search(query/args), .search(query, cb)
-      callback = args;
-      args = undefined;
-    }
-
-    // .search(args), careful: typeof null === 'object'
-    if (typeof query === 'object' && query !== null) {
-      args = query;
-      query = undefined;
-    } else if (query === undefined || query === null) { // .search(undefined/null)
-      query = '';
-    }
-
-    var params = '';
-
-    if (query !== undefined) {
-      params += queryParam + '=' + encodeURIComponent(query);
-    }
-
-    if (args !== undefined) {
-      // `_getSearchParams` will augment params, do not be fooled by the = versus += from previous if
-      params = this.as._getSearchParams(args, params);
-    }
-
-    return this._search(params, callback);
-  };
 }
